--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "lint": "eslint src"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2"
   },
   "devDependencies": {
