--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,15 @@
 {
   "compilerOptions": {
+    "target": "ES2015",
+    "module": "es2022",
     "strict": true,
-    "allowUnusedLabels": false,
-    "allowUnreachableCode": false,
-    "exactOptionalPropertyTypes": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitOverride": true,
-    "noImplicitReturns": true,
-    "noPropertyAccessFromIndexSignature": true,
-    "noUncheckedIndexedAccess": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-
-    "checkJs": true,
-
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
 
-    "module": "es2022",
     "outDir": "dist",
     "moduleResolution": "node"
   },
   "$schema": "https://json.schemastore.org/tsconfig",
-  "display": "Strictest",
-  "_version": "2.0.0"
+  "display": "Recommended"
 }
