--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "eslint src"
   },
   "dependencies": {
+    "@opentripplanner/types": "^5.0.0",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
