--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@opentripplanner/types": "^5.0.0",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "express": "^4.18.2"
   },
