--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
+    "driving-costs-calculator": "git+https://github.com/FabmobQC/driving-costs-calculator.git#c9926ce",
     "express": "^4.18.2"
   },
   "devDependencies": {
