--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "build": "tsc",
     "start": "tsc-watch --build --onSuccess \"node dist/index.js\"",
     "lint": "eslint src"
   },
