--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "driving-costs-calculator": "git+https://github.com/FabmobQC/driving-costs-calculator.git#14b1ac7",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "@opentripplanner/types": "^6.1.1",
