--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "dotenv": "^16.0.3",
     "driving-costs-calculator": "git+https://github.com/FabmobQC/driving-costs-calculator.git#14b1ac7",
     "express": "^4.18.2",
+    "papaparse": "^5.4.1",
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "@opentripplanner/types": "^6.1.1",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/papaparse": "^5.3.14",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "eslint": "^8.40.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
